--- a/front/src/lib/styles/pages/categories.css
+++ b/front/src/lib/styles/pages/categories.css
@@ -1,22 +1,33 @@
+.transition-container.category-page {
+  flex-grow: 0;
+  justify-items: top;
+}
 .category {
-  &-summary {
+  .category-summary {
+    @apply dg--font-lb;
+    display: flex;
+    align-items: center;
     padding-bottom: 1rem;
-    max-height: 33rem;
-    text-align: center;
-    @apply dg--transition-effect
-      transition-opacity;
+    min-height: 400px;
+    max-height: 11rem;
     @screen md {
       padding-bottom: 2rem;
     }
-    h1.category-name {
-      font-size: 3rem;
+    .page-transition-container {
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      min-width: 100%;
+    }
+    p {
+      max-width: 77%;
+      text-align: center;
     }
   }
   .category-posts-list {
-    display: inline-block;
     float: left;
-    width: 70%;
-    min-height: 9rem;
+    width: 72%;
+    padding: 0.5rem;
     .post-item {
       margin-bottom: 1.75rem;
       list-style-type: none;
@@ -26,21 +37,22 @@
       }
       .post-item-heading {
         display: flex;
-        flex-direction: column;
         flex-grow: 1;
+        flex-direction: column;
         .post-title {
           margin-bottom: 0;
         }
       }
       .post-item-image {
         display: flex;
-        flex-direction: column;
         flex-shrink: 0;
+        flex-direction: column;
+        align-self: start;
+        margin-left: 1.75rem;
         border-radius: 100%;
         width: 77px;
         height: 77px;
-        margin-left: 1.75rem;
-        align-self: start;
+        z-index: 3;
       }
     }
   }
@@ -50,19 +62,35 @@
     right: 0;
     float: right;
     opacity: 1;
-    width: 20%;
+    width: 25%;
+    padding-left: 1rem;
     li {
       list-style-type: none;
     }
   }
 }
 
+.page-transition-container {
+  opacity: 1;
+  transition: opacity;
+  min-height: 100%;
+  @apply dg--transition-effect;
+}
+
 .animating-page {
+  overflow: hidden;
   .category {
-    .category-summary {
-      opacity: 0;
-      .transition-container:last-of-type {
-        height: 0;
+    .category-summary,
+    .category-posts-list {
+      .page-transition-container {
+        opacity: 0;
+        &:last-of-type {
+          height: 0;
+          overflow: hidden;
+        }
+        &:first-of-type:last-of-type {
+          height: 100% !important;
+        }
       }
     }
   }
