--- a/front/src/lib/styles/components/layout.css
+++ b/front/src/lib/styles/components/layout.css
@@ -46,11 +46,23 @@
     transition-colors
     sm:max-w-5xl;
 }
+.post-aside,
+.category-aside {
+  border: 0;
+  border-left-width: 1px;
+  border-left-style: solid;
+  border-image: linear-gradient(
+      to bottom,
+      rgba(0, 0, 0, 0),
+      rgba(var(--foreground-rgb), 0.2),
+      rgba(0, 0, 0, 0)
+    )
+    1;
+}
 .footer {
   flex-grow: 1;
   justify-items: end;
 }
-
 
 .footer {
   @apply flex
