--- a/front/src/lib/styles/pages/category.css
+++ b/front/src/lib/styles/pages/category.css
@@ -7,6 +7,7 @@
   margin-top: 3rem;
   margin-bottom: 3.33rem;
   border-radius: 0.77rem;
+  border-top-right-radius: 0;
   background-color: rgba(var(--background-saturated), 0.77);
   padding: 2.33rem 0;
   @apply shadow-xl;
@@ -14,14 +15,31 @@
     margin-top: 5rem;
     padding: 2.33rem;
   }
-  .category-summary {
+  .category-head {
     @apply dg--font-lb;
     display: flex;
-    padding-bottom: 1rem;
     position: relative;
     top: -5rem;
+    padding-bottom: 1rem;
     @screen md {
       padding-bottom: 2rem;
+    }
+    .category-name {
+      max-width: 77%;
+      text-align: center;
+    }
+    p {
+      max-width: 77%;
+      text-align: center;
+    }
+    .page-navigation.mini.top {
+      position: absolute;
+      top: 1rem;
+      right: 0;
+      padding: 0;
+      label {
+        background-color: rgba(var(--background-saturated), 0.77);
+      }
     }
     .page-transition-container {
       display: flex;
@@ -29,17 +47,22 @@
       align-items: center;
       min-width: 100%;
     }
-    p {
-      max-width: 77%;
-      text-align: center;
-    }
   }
-  .category-posts-list {
+  .category-posts-list,
+  .category-aside {
     position: relative;
     top: -5rem;
-    float: left;
-    width: 72%;
-    padding: 0.5rem;
+    margin-bottom: -5rem;
+  }
+  .category-posts-list {
+    padding-right: 1rem;
+    padding-left: 1rem;
+    width: 100%;
+    @screen sm {
+      float: left;
+      padding-right: 0.5rem;
+      width: 72%;
+    }
     .post-item {
       margin-bottom: 1.75rem;
       list-style-type: none;
@@ -60,22 +83,25 @@
         flex-shrink: 0;
         flex-direction: column;
         align-self: start;
+        z-index: 3;
         margin-left: 1.75rem;
         border-radius: 100%;
         width: 77px;
         height: 77px;
-        z-index: 3;
       }
     }
   }
   .category-aside {
-    display: block;
+    display: none;
     position: relative;
     right: 0;
     float: right;
     opacity: 1;
-    width: 25%;
     padding-left: 1rem;
+    width: 25%;
+    @screen sm {
+      display: block;
+    }
     li {
       list-style-type: none;
     }
@@ -92,7 +118,7 @@
 .animating-page {
   overflow: hidden;
   .category {
-    .category-summary,
+    .category-head,
     .category-posts-list {
       .page-transition-container {
         opacity: 0;
