fix(front): adds a bonus fix for flex-grow on `.main` and `.main-secondary`

--- a/front/src/lib/styles/components/layout.css
+++ b/front/src/lib/styles/components/layout.css
@@ -12,8 +12,9 @@
     xs:px-4
     sm:pt-5;
   transition: height 1s;
+  flex-grow: 1;
   &.main-secondary {
-    flex-grow: 0;
+    /* flex-grow: 0; */
     justify-items: start;
   }
 }
