--- a/front/src/lib/styles/components/layout.css
+++ b/front/src/lib/styles/components/layout.css
@@ -11,7 +11,6 @@
     pt-3
     xs:px-4
     sm:pt-5;
-  transition: height 1s;
   flex-grow: 1;
   &.main-secondary {
     /* flex-grow: 0; */
@@ -91,7 +90,7 @@
 
 .transition-container {
   display: flex;
-  /* flex-grow: 1; */
+  flex-grow: 1;
   flex-direction: column;
   justify-content: center;
   align-items: center;
