--- a/front/src/lib/styles/components/typography.css
+++ b/front/src/lib/styles/components/typography.css
@@ -85,3 +85,16 @@
       md:text-lg;
   }
 }
+
+.summary {
+  @apply dg--font-lb;
+  font-size: 1.2rem;
+  padding: 2rem;
+  text-indent: 0;
+  text-wrap: pretty;
+  &::first-letter {
+    @apply dg--font-lbb;
+    font-size: 1.5rem;
+    /* font-style: italic; */
+  }
+}
