--- a/front/src/lib/styles/components/typography.css
+++ b/front/src/lib/styles/components/typography.css
@@ -60,7 +60,7 @@
       md:text-4xl;
   }
   h3 {
-    @apply dg--font-psb
+    @apply dg--font-psbl
       mb-4
       text-2xl
       md:text-3xl;
