fix(front): adjusts footnotes indentation and adds nofollow/noreferrer/target=_blank to links
closes #503

--- a/front/src/lib/styles/pages/post.css
+++ b/front/src/lib/styles/pages/post.css
@@ -134,6 +134,11 @@
     h2.footnotes-title {
       margin-top: 3rem;
     }
+    .footnotes {
+      li {
+        margin-left: 1.2rem;
+      }
+    }
   }
   .post-aside {
     display: none;
