fix(front): fixes line number highlight implementation; general style fixes

--- a/front/src/lib/styles/global.css
+++ b/front/src/lib/styles/global.css
@@ -318,3 +318,12 @@ body {
       mt-5;
   }
 }
+
+.post, .category {
+
+  aside, .page-navigation-list {
+    a {
+      display: inline-block;
+    }
+  }
+}
