--- a/front/src/lib/styles/components/typography.css
+++ b/front/src/lib/styles/components/typography.css
@@ -89,7 +89,11 @@
 .summary {
   @apply dg--font-lb;
   font-size: 1.2rem;
-  padding: 2rem;
+  padding: 1rem;
+  margin: 0;
+  @screen md {
+    padding: 2rem;
+  }
   text-indent: 0;
   text-wrap: pretty;
   &::first-letter {
