--- a/front/src/lib/styles/global.css
+++ b/front/src/lib/styles/global.css
@@ -1,17 +1,17 @@
-@import "components/fonts.css";
-@import "components/layout.css";
-@import "components/typography.css";
-@import "components/utilities.css";
-@import "components/tw-components.css";
-@import "components/Code/Code.css";
-@import "components/nav.css";
-@import "components/theme-toggle.css";
-@import "components/posts-grid.css";
-@import "components/page-nav.css";
-@import "pages/category.css";
-@import "pages/post.css";
-@import "pages/posts.css";
-@import "pages/privacy.css";
+@import 'components/fonts.css';
+@import 'components/layout.css';
+@import 'components/typography.css';
+@import 'components/utilities.css';
+@import 'components/tw-components.css';
+@import 'components/Code/Code.css';
+@import 'components/nav.css';
+@import 'components/theme-toggle.css';
+@import 'components/posts-grid.css';
+@import 'components/page-nav.css';
+@import 'pages/category.css';
+@import 'pages/post.css';
+@import 'pages/posts.css';
+@import 'pages/privacy.css';
 
 @tailwind base;
 @tailwind components;
@@ -88,7 +88,7 @@ body {
     187% 77vh at top,
     rgb(var(--subdued-rgb)),
     rgb(var(--background-start-rgb)),
-    /* rgb(var(--background-end-rgb)) 100%, */ transparent 83%
+    transparent 83%
   );
   background-position: top center;
   background-repeat: no-repeat;
@@ -308,7 +308,9 @@ body {
   flex-direction: column;
   align-items: center;
   opacity: 0.57;
-  transition: color 0.5s ease-in-out, opacity 0.5s ease-in-out;
+  transition:
+    color 0.5s ease-in-out,
+    opacity 0.5s ease-in-out;
   &:hover,
   &:focus {
     color: rgb(var(--highlight-rgb));
@@ -319,9 +321,10 @@ body {
   }
 }
 
-.post, .category {
-
-  aside, .page-navigation-list {
+.post,
+.category {
+  aside,
+  .page-navigation-list {
     a {
       display: inline-block;
     }
