--- a/front/src/lib/styles/components/layout.css
+++ b/front/src/lib/styles/components/layout.css
@@ -45,19 +45,23 @@
     opacity-95
     transition-colors
     sm:max-w-5xl;
-}
-.post-aside,
-.category-aside {
-  border: 0;
-  border-left-width: 1px;
-  border-left-style: solid;
-  border-image: linear-gradient(
-      to bottom,
-      rgba(0, 0, 0, 0),
-      rgba(var(--foreground-rgb), 0.2),
-      rgba(0, 0, 0, 0)
-    )
-    1;
+  .post-aside,
+  .category-aside {
+    border: 0;
+    border-left-width: 1px;
+    border-left-style: solid;
+    padding: 0 1rem;
+    border-image: linear-gradient(
+        to bottom,
+        rgba(0, 0, 0, 0),
+        rgba(var(--foreground-rgb), 0.2),
+        rgba(0, 0, 0, 0)
+      )
+      1;
+    @screen sm {
+      padding: 2rem 1rem 0;
+    }
+  }
 }
 .footer {
   flex-grow: 1;
