build(front): enhances Code component styles and conditional copybutton display

--- a/front/src/lib/styles/components/Code/Code.css
+++ b/front/src/lib/styles/components/Code/Code.css
@@ -43,10 +43,12 @@
   .language {
     right: 0;
     border-top-right-radius: 0.375rem;
-    padding-right: 2.5rem;
     color: rgba(var(--foreground-rgb), 0.33);
     text-align: right;
     transition: color 0.5s;
+    &.copy {
+      padding-right: 2.5rem;
+    }
   }
   .code-copy-btn {
     position: absolute;
