build(front): adjusts footer hover styles and padding

--- a/front/src/lib/styles/components/layout.css
+++ b/front/src/lib/styles/components/layout.css
@@ -75,39 +75,39 @@
   @apply flex
     flex-col
     justify-end
-    pb-3
+    pb-0
     pt-3
     text-center
     text-sm;
   small {
     color: rgb(var(--subdued-rgb));
     transition: color 1.5s !important;
+    padding: 1rem 0;
     a {
       @apply dg--transition-effect
         brightness-75
         transition;
-      border-color: rgb(var(--foreground-rgb));
-      color: rgb(var(--foreground-rgb));
+      border-bottom: 1px solid rgba(var(--foreground-rgb), 0.5);
+      color: rgb(var(--subdued-rgb));
       &:hover,
       &:focus {
         @apply brightness-100;
       }
     }
     p, img {
-      transition-property: color, opacity;
+      color: rgb(var(--foreground-rgb));
+      transition-property: opacity;
       transition-duration: 0.5s;
+      opacity: 0.2;
+      backface-visibility: hidden;
+      transform-style: preserve-3d;
     }
     &:hover,
     &:focus {
       p, img {
-        color: rgb(var(--foreground-rgb));
         opacity: 1.0 !important;
       }
     }
-  }
-  img {
-    opacity: 0.2;
-    transition: opacity 0.33s;
   }
 }
 
