--- a/front/src/lib/styles/components/nav.css
+++ b/front/src/lib/styles/components/nav.css
@@ -18,22 +18,20 @@
 
 .nav-home {
   @apply dg--font-psbl
-    dg--transition-effect
     text-xl
-    leading-none
-    tracking-tight
     sm:ml-[2px]
     sm:text-2xl;
+    transition: unset;
+    transition: font-size, color;
+    @apply dg--transition-effect;
+    letter-spacing: -0.025em;
+    line-height: 1;
     color: rgb(var(--foreground-color));
     &:hover,
-    &:focus {
+    &:focus,
+    &:active {
       color: rgb(var(--highlight-rgb));
     }
-  h1 {
-    transition: font-size;
-    @apply dg--transition-effect
-      tracking-tight;
-  }
 }
 
 .nav-bar {
